<resources>
    <string name="app_name">Calculatrice Imen</string>
    <string name="calculatrice">Calculatrice</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mult">*</string>
    <string name="egal">=</string>
    <string name="plus">+</string>
    <string name="virgule">,</string>
    <string name="soust">-</string>
    <string name="poucentage">%</string>
    <string name="division">/</string>
    <string name="negatif">+/-</string>
    <string name="parnthese">()</string>
    <string name="c">C</string>
    <string name="resultat">Resultat</string>
    <string name="effacer">effacer</string>
</resources>
